# spyral-utils

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  release-pypi.yml  release-testpypi.yml  test-actions.yml
api/about/: index.html
api/constants/: index.html
api/nuclear/: index.html
api/nuclear/momentum/: index.html
api/nuclear/nuclear_map/: index.html
api/nuclear/particle_id/: index.html
api/plot/: index.html
api/plot/cut/: index.html
api/plot/histogram/: index.html
docs/: faq.md  for_devs.md  index.md  quick_start.md
docs/api/: about.md  constants.md
docs/api/nuclear/: index.md  momentum.md  nuclear_map.md  particle_id.md  target.md
docs/api/plot/: cut.md  histogram.md  index.md
faq/: index.html
for_devs/: index.html
quick_start/: index.html
src/spyral_utils/: constants.py
src/spyral_utils/nuclear/: __init__.py  particle_id.py  target.py
src/spyral_utils/plot/: __init__.py  cut.py  histogram.py
src/spyral_utils/tripclust/: CMakeLists.txt  pybind.cpp
src/spyral_utils/tripclust/src/: directedgraph.cpp  directedgraph.h  option.h  orthogonallsq.cpp  orthogonallsq.h  postprocess.cpp  postprocess.h
src/spyral_utils/tripclust/src/kdtree/: kdtree.cpp  kdtree.hpp
tests/: cut.json  gas_catima_target.json  gas_target.json  gas_target_temp.json  solid_target.json  test_cut.py  test_target.py
