[project]
name = "spyral-utils"
version = "2.1.0"
description = "A collection of useful utilities for the Spyral analysis framework"
authors = [
    {name = "Gordon McCann", email = "mccann@frib.msu.edu"},
    {name = "Nathan Turi", email = "turi@frib.msu.edu"},
    {name = "Daniel Bazin", email = "bazin@frib.msu.edu"},
]
dependencies = [
    "numpy>=2.0, <2.2",
    "scipy>=1.13.0",
    "polars>=1.0.0",
    "pycatima>=1.90",
    "shapely>=2.0.6",
    "vector>=1.3.0",
    "pybind11>=3.0.0",
    "eigenpip>=0.1.0",
]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-backend", "scikit-build-core", "pybind11"]
# build-backend = "pdm.backend"
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
    "pytest>=7.4.3",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.14",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
]
